# cmakeopengl

./: .gitignore  CMakeLists.txt  README.md
cmakelearnopengl/: CMakeLists.txt  Camera.h  Cube.cpp  Cube.hpp  Shader.h  VertexArrayObject.cpp  VertexArrayObject.h  asset_locations.h.in  glad.c  main.cpp  stb_image.cpp
cmakelearnopengl/assets/shaders/: basic.frag  basic.vert  light.frag  lighting.frag  lighting.vert
include/glad/: glad.h
lib/: glfw3.lib
